syntax = "proto3";

package user;

service UserService {
    rpc GetUser (UserRequest) returns (UserResponse);
    rpc CreateUser (CreateUserRequest) returns (UserResponse);
}

message UserRequest {
    string userId = 1;
}

message UserResponse {
    string name = 1;
    string email = 2;
}

message CreateUserRequest {
    string userId = 1;
    string name = 2;
    string email = 3;
}